fixed scrool on iphone, select, button

--- a/style.css
+++ b/style.css
@@ -18,17 +18,85 @@ html {
 }
 
 .choose_wrap {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
+
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
   align-items: center;
-  margin: 0 auto;
   text-align: center;
   font-size: 20px;
+  width: 100%;
   background-color: rgb(117, 154, 168);
-  box-shadow: 0px 15px 23px 0px rgba(0, 0, 0, 0.45);
+  box-shadow: 0px 15px 23px 0px rgba(0, 0, 0, 0.45),
+    inset 0px 2px 5px 0px rgba(0, 0, 0, 0.45);
 }
+
+/*custom select start*/
+.custom-select {
+  position: relative;
+  display: inline-block;
+}
+
+.custom-select select {
+  display: inline-block;
+  border: 2px solid rgb(90, 104, 122);
+  padding: 4px 3px 3px 5px;
+  margin: 0;
+  font: inherit;
+  outline: none; /* remove focus ring from Webkit */
+  line-height: 1.2;
+  background: #dfcbcb;
+
+  -webkit-appearance: none; /* remove the strong OSX influence from Webkit */
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.29);
+
+  border-radius: 12px;
+}
+
+/* for Webkit's CSS-only solution */
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  .custom-select select {
+    padding-right: 30px;
+  }
+}
+
+/* Since we removed the default focus styles, we have to add our own */
+.custom-select select:focus {
+  -webkit-box-shadow: 0 0 3px 1px rgb(0, 112, 204);
+  -moz-box-shadow: 0 0 3px 1px rgb(0, 112, 204);
+  box-shadow: 0 0 3px 1px rgb(0, 112, 204);
+}
+
+/* Select arrow styling */
+.custom-select:after {
+  content: "▼";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  font-size: 60%;
+  line-height: 35px;
+  padding: 0 7px;
+  background: rgb(90, 104, 122);
+  color: #dfcbcb;
+
+  pointer-events: none;
+
+  border-radius: 0 12px 12px 0;
+}
+
+.no-pointer-events .custom-select:after {
+  content: none;
+}
+/*custom select end*/
 
 .score {
   display: block;
@@ -36,38 +104,35 @@ html {
   width: 100vw;
   text-align: center;
 }
-.difficulty {
-  font-size: 18px;
-}
+
 .start_button {
-  display: block;
   border: none;
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
-  background: linear-gradient(
-    135deg,
-    rgb(196, 218, 233) 0%,
-    rgb(117, 154, 168) 80%
-  );
+  border: 2px solid rgb(90, 104, 122);
+  padding-top: 4px;
+  padding-bottom: 5px;
+  padding-left: 12px;
+  padding-right: 12px;
+  border-radius: 12px;
+  font: inherit;
+  outline: none; /* remove focus ring from Webkit */
+  line-height: 1.2;
+  background-color: #dfcbcb;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.29);
 }
-.start_button:hover,
 .start_button:focus {
   cursor: pointer;
-  box-shadow: none;
-  background: none;
-  background-color: rgb(117, 154, 168);
+  box-shadow: 0 0 3px 1px rgb(0, 112, 204);
+
+  outline: none;
 }
 .start_button:active {
   cursor: pointer;
   box-shadow: none;
-  background: none;
-  background-color: rgb(117, 154, 168);
   box-shadow: inset 0px 0px 6px 2px rgba(0, 0, 0, 0.34);
 }
 
 .page_header {
+  padding-top: 4px;
   font-size: 32px;
 }
 
@@ -82,6 +147,7 @@ html {
   left: 50%;
   transform: translate(-50%, -50%);
   box-shadow: 0px 15px 23px 0px rgba(0, 0, 0, 0.45);
+  z-index: 5;
 }
 
 .game_container {
@@ -95,6 +161,7 @@ html {
   grid-gap: 3px;
   border: rgb(64, 71, 64) solid 3px;
   border-radius: 4px;
+  z-index: 7;
 }
 
 @media only screen and (orientation: landscape) {
@@ -132,6 +199,7 @@ html {
   box-shadow: inset 0 0 3px rgb(64, 71, 64);
   overflow: hidden;
   border-radius: 3px;
+  z-index: 8;
 }
 .numb {
   display: block;
